# formi

./: Cargo.toml  build.rs
src/: core.rs  error.rs  interpreter.rs  loop.rs  main.rs  repl.rs  stack.rs  token_iterator.rs  tokens.rs  types.rs
src/core/: abs.rs  and.rs  colon.rs  cr.rs  do.rs  dot.rs  dot_quote.rs  drop.rs  dupe.rs  else.rs  equals.rs  false.rs  fm_slash_mod.rs  greater_than.rs  i.rs  if.rs  invert.rs  j.rs  leave.rs  less_than.rs  loop.rs  lshift.rs  m_star.rs  max.rs  min.rs  minus.rs  mod.rs  modulo.rs  negate.rs  one_minus.rs  one_plus.rs  or.rs  over.rs  plus.rs  plus_loop.rs  question_dupe.rs  quote.rs  r_fetch.rs  r_from.rs  rote.rs  (+24 more)
