[package]
name = "formi"
version = "0.1.0"
edition = "2024"

[dependencies]
phf = { version = "0.13.1", default-features = false }
thiserror = "2"

[features]
default = ["repl"]
std = []
repl = ["std"]

[build-dependencies]
phf = { version = "0.13.1", default-features = false }
phf_codegen = "0.13.1"
proc-macro2 = "1"
syn = { version = "2", features = ["full", "visit"] }
